--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,11 @@ body
 header
 {
     width: 1335px;
+    height: 72px;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin-top: 30px;
+   
 }
 .lien_navigation_logo
 {
@@ -24,8 +25,8 @@ header
     height: 70px;
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-    margin-top: 40px;
+    align-items: center;
+   
 }
 
 .logo{
@@ -46,18 +47,20 @@ header
     width: 38%; 
     height: 70px;
     display: flex;
-    align-items:stretch;     
+    align-items:center;     
     justify-content: space-evenly;
-     border-top: 1px solid #0065FC;
+    
 }
 .couleurbleu1
 {
     color:#0065FC;
+    font-weight: bold;
 }
-.couleur
+.hover_bleu_border:hover
 {
-    color: black;
+    color: #0065FC;
 }
+
 .decorationnone
 {
     text-decoration: none;
@@ -136,7 +139,7 @@ header
 }
 .recherchefiltreicon:hover
 {
-    background-color: coral;
+    background-color: #F2F2F2;
 }
 .recherchefiltre
 {
@@ -503,4 +506,41 @@ a{
 .titreactivité
 {
     width: 1345px;
+}
+@media screen and (max-width:640px)
+{
+    .hebergement_hebergementpopulaire
+    {
+       flex-direction: column-reverse;
+    }
+    .hebergementcartepopulaire
+    {
+        width: 335px;
+        height: 193px;
+    }
+    .hébergementPopulaire
+    {
+    flex-direction: column;
+    width: 372px;
+    height: 583px;
+    background-color: #F2F2F2;
+    border-radius: 20px 20px 20px 20px; 
+}
+    .hebergement_populaire
+    {
+    width: 372px;
+    height: 583px;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    }
+    #bloc_page
+    {
+        width: 640px;
+        height: 4547px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
