--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ header
 .barrederecherche
 {
     height: 51px;
-    width: 1335px;
+   
     display: flex;
     margin-bottom:30px;
 }
@@ -179,7 +179,7 @@ header
 {
     display: flex;
     align-items: center;
-    width: 1340px;
+   
     margin-top: 40px;
     padding-left: 10px;
 }
@@ -492,16 +492,17 @@ a{
     color: black;
     padding-bottom: 15px;
 }
-.titreactivité
-{
-    width: 1345px;
-}
+
 @media screen and (max-width:640px)
 {
     .hebergement_hebergementpopulaire
     {
        flex-direction: column-reverse;
        width: auto;
+    }
+    header
+    {
+        width: auto;
     }
     .hebergementcartepopulaire
     {
@@ -599,13 +600,13 @@ a{
 }
 .activitécarteimage_fort
 {
-    width: 98%;
+    width: 100%;
     height: 150px;
     margin-bottom: 60px;
 }
 .activitécarteimage_vieux_parc
 {
-    width: 98%;
+    width: 100%;
     height: 150px;
     margin-bottom: 60px;
 }
@@ -615,6 +616,7 @@ a{
 }
 .activitécarteimage_ile
 {
+    width: 100%;
     height: 150px;
     margin-bottom: 60px;
 }
