--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body
 {
     font-family:"raleway" , sans-serif; 
-    
+    width: fit-content;
 }
 
 header
@@ -15,7 +15,7 @@ header
 }
 .lien_navigation_logo
 {
-    width: 1335px;
+    width: fit-content;
     height: 70px;
     display: flex;
     justify-content: space-between;
@@ -69,6 +69,7 @@ header
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    color: black;
 }
 .couleurbleu1
 {
@@ -532,7 +533,7 @@ a{
     padding-bottom: 15px;
 }
 
-@media screen and (max-width:1400px) and (min-width: 640px)
+@media screen and (max-width:1100px) and (min-width: 640px)
 {
     header
     {
@@ -542,15 +543,168 @@ a{
     {
         width: 100%;
     }
+    .logo
+    {
+        margin-right: 830px;
+    }
     .lien_navigation_logo
     {
-        width: 100%;
-        justify-content: flex-start;
+        
+        justify-content: flex-end;
     }
     .herbergement_activité_lien
     {
         margin-left: 20px;
     }
+    .recherchefiltre
+    {
+        font-size: x-large;
+        height: auto;
+    }
+    .resultatrecherche
+    {
+        font-size: larger;
+    }
+    .hebergement_hebergementpopulaire
+    {
+        flex-direction: column-reverse;
+
+    }
+    .hébergementPopulaire
+    {
+        width: auto;
+        
+        
+    }
+    .hebergement_populaire
+    {
+        flex-direction: row;
+        flex-wrap: wrap-reverse;
+        width: auto;
+    }
+    .hebergement_populaire_titre_icon
+    {
+        order: 1;
+        padding-top: 15px;
+    }
+    .hebergementcartepopulaire
+    {
+        flex-direction: column;
+        height: 80%;
+        width: 400px;
+        margin-bottom: 20px;
+    }
+    .herbergementpopulaireimgimg
+    {
+        width: 100%;
+        height: 300px;
+        border-radius: 20px 20px 0px 0px;
+    }
+    .hover_cliquable
+    {
+        font-size: x-large;
+    }
+    .hebergementprix
+    {
+        font-size: x-large;
+    }
+    .hebergement_prix
+    {
+        font-size: x-large;
+        line-height: 2;
+    }
+    .iconetoile
+    {
+        font-size: medium;
+    }
+    .hebergementcartetitre
+    {
+        margin-top: 45px;
+    }
+    .hebergement_titre
+    {
+        font-size: x-large;
+    }
+    .fa-line-chart
+    {
+        font-size: xx-large;
+    }
+    .bordure_hebergement
+    {
+        height: auto;
+        width: auto;
+        margin-top: 30px;
+    }
+    .titrehebergement
+    {
+        width: 100%;
+        font-size: x-large;
+    }
+    .cartehebergement
+    {
+        width: 400px;
+        height: 500px;
+    }
+    .imghebergement
+    {
+        width: 100%;
+        height: 60%;
+    }
+    .titre_hebergement
+    {
+        padding-left: 445px;
+        padding-top: 0px;
+    }
+    .afficherplusherbergement
+    {
+        padding-left: 650px;
+        font-size: x-large;
+        height: 40px;
+    }
+    .activité
+    {
+        width:auto;
+        height:800px;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: flex-start;
+        
+    }
+    .activitécarteimage
+    {
+        width: 425px;
+        height:350px;
+        margin-right: 30px;
+    }
+    .bloc_fort_ile
+    {
+        display: flex;
+        flex-direction: row;
+    }
+    .bloc_notredame_longchamp
+    {
+        display: flex;
+        flex-direction: row;
+    }
+    .activitéimage
+    {
+        height: 70%;
+        width: 100%;
+    }
+    .bordure_footer
+    {
+        height: 300px;
+        margin-top: 30px;
+    }
+    .footercolonetitre
+    {
+        font-size: xx-large;
+    }
+    .lien_footer
+    {
+        font-size: x-large;
+    }
+
 }
 @media screen and (max-width:640px)
 {
@@ -562,6 +716,10 @@ a{
     nav
     {
         width: 100%;
+    }
+    .logo
+    {
+        margin-right: 0px;
     }
     .lien_navigation_logo
     {
